# OpenGL-Testing

./: .gitignore  .vimrc  CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  FindSQLite3.cmake
dev/: env.sh  ideas.txt  leaks.supp  session.vim
include/: ECS.h  camera.h  components.h  cube.h  entity.h  glutils.h  mainloop.h  objloader.h  render_system.h  shader.h  terrains.h  triangles.h  utils.h
include/render/: entity_renderer.h
libs/algebra/: CMakeLists.txt  algebra.c
libs/algebra/include/: algebra.h
libs/cglm/: CMakeLists.txt
libs/klib/: CMakeLists.txt
libs/klib/include/: khash.h  kvec.h
libs/structures/: CMakeLists.txt  hash.h  hashtable.h  hlist.h  list.h  vector.h
resources/: cube.fragment.glsl  cube.vertex.glsl  entity.fragment.glsl  entity.vertex.glsl
src/: CMakeLists.txt  ECS.c  camera.c  cube.c  entity.c  glutils.c  main.c  mainloop.c  objloader.c  render_system.c  shader.c  terrains.c  utils.c
src/render/: entity_renderer.c
tests/: CMakeLists.txt  asantest.c  structtest.c  test  test.c
