add_executable(main 
    main.c 
    utils.c
    glutils.c
    cube.c
    entity.c
    objloader.c
)
target_link_libraries(main 
    PRIVATE 
        OpenGL::OpenGL 
        GLEW::GLEW 
        SDL2::SDL2main
        SDL2::SDL2_image
        cglm
        structures
)
target_include_directories(main 
    PRIVATE 
        ${CMAKE_SOURCE_DIR}/include
)
target_compile_features(main
    PRIVATE
        c_std_11
)
target_compile_options(main
    PRIVATE
        -Wall -Wextra -pedantic -Wimplicit-fallthrough
)
target_compile_definitions(main 
    PRIVATE
        "RESOURCE_DIR=\"${RESOURCE_DIR}\""
        $<$<CONFIG:Release>:"NDEBUG">
)
if (DISABLE_ATTRIBUTES)
    target_compile_definitions(main
        PRIVATE
            "NOATTRIBUTES"
)
endif(DISABLE_ATTRIBUTES)
